--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -53,13 +53,21 @@ lazy_static = "1.5"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 wiremock = "0.6.0"
-keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
 ctor = "0.2.7"
 paste = "1.0"
 serde_yaml = "0.9.34"
 once_cell = "1.20.2"
 dirs = "6.0.0"
 rand = "0.8.5"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+keyring = { version = "3.6.1", features = ["windows-native"] }
+
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "link-arg=/STACK:8388608"]
+
+[target.aarch64-pc-windows-msvc]
+rustflags = ["-C", "link-arg=/STACK:8388608"]
 
 [dev-dependencies]
 criterion = "0.5"
